syntax = "proto3";

package blockpost.blockpost;

import "amino/amino.proto";
import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "blockpost/blockpost/params.proto";
import "blockpost/blockpost/post.proto";

option go_package = "BlockPost/x/blockpost/types";

// Query defines the gRPC querier service.
service Query {
  
  // Parameters queries the parameters of the module.
  rpc Params (QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/BlockPost/blockpost/params";
  
  }
  
  // Queries a list of ShowPost items.
  rpc ShowPost (QueryShowPostRequest) returns (QueryShowPostResponse) {
    option (google.api.http).get = "/BlockPost/blockpost/show_post/{id}";
  
  }
  
  // Queries a list of ListPost items.
  rpc ListPost (QueryListPostRequest) returns (QueryListPostResponse) {
    option (google.api.http).get = "/BlockPost/blockpost/list_post";
  
  }
}
// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false, (amino.dont_omitempty) = true];
}

message QueryShowPostRequest {
  uint64 id = 1;
}

message QueryListPostRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryShowPostResponse {
  Post post = 1 [(gogoproto.nullable) = false];
}

message QueryListPostResponse {
  repeated Post post = 1 [(gogoproto.nullable) = false];
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}